--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/kata1
+spring.datasource.username=root
+spring.datasource.password=00000000
+spring.jpa.hibernate.ddl-auto=update
 
